# acode-native

./: .gitignore  ACODE_ANALYSIS.md  ACODE_PLUGIN_SYSTEM.md  CHANGELOG.md  CLAUDE.md  _typos.toml  config.xml  package-lock.json  package.json  rspack.config.js  webpack.config.js
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/workflows/: build-acode-with-rust.yml  build-apk.yml  build-rust-android.yml  ci.yml  close-inactive-issues.yml  community-release-notifier.yml  nightly-build.yml  on-demand-preview-releases-PR.yml
acode-rs/: Cargo.toml
acode-rs/src/: archive.rs  checksum.rs  color.rs  diff.rs  encoding.rs  fs.rs  highlight.rs  lib.rs  markdown.rs  sanitize.rs  search.rs  zip.rs
hooks/: modify-java-files.js  post-process.js
src/: boot.js  index.d.ts  main.js  main.scss
src/cm/: baseExtensions.ts  commandRegistry.js  indentGuides.ts  mainEditorExtensions.ts  modelist.ts  rainbowBrackets.ts  supportedModes.ts  touchSelectionMenu.js
src/cm/lsp/: api.ts  clientManager.ts  index.ts  providerUtils.ts  serverLauncher.ts  serverRegistry.ts  tooltipExtensions.ts  types.ts
src/cm/themes/: index.js  vscodeDark.js
src/components/: settingsPage.js  settingsPage.scss
src/components/lspInfoDialog/: index.js
src/dialogs/: style.scss
src/handlers/: keyboard.js  quickTools.js  quickToolsInit.js
src/lang/: ar-ye.json  be-by.json  bn-bd.json  cs-cz.json  de-de.json  en-us.json  es-sv.json  fr-fr.json  he-il.json  hi-in.json  hu-hu.json  id-id.json  index.d.ts  ir-fa.json  it-it.json  ja-jp.json  ko-kr.json  ml-in.json  mm-unicode.json  mm-zawgyi.json  pl-pl.json  pt-br.json  pu-in.json  ru-ru.json  tl-ph.json  tr-tr.json  uk-ua.json  uz-uz.json  vi-vn.json  zh-cn.json  zh-hant.json  zh-tw.json
src/lib/: acode.js  applySettings.js  auth.js  commands.js  config.js  console.js  editorFile.js  editorManager.js  fileList.js  fonts.js  installPlugin.js  notificationManager.js  openFile.js  openFolder.js  saveFile.js  settings.js  showFileInfo.js
src/settings/: appSettings.js  editorSettings.js  filesSettings.js  lspConfigUtils.js  lspServerDetail.js  scrollSettings.js  terminalSettings.js
src/sidebarApps/: index.js  sidebarApp.js
src/styles/: list.scss
src/test/: url.tests.js
src/theme/: builder.js  preInstalled.js
src/utils/: helpers.js
src/views/: menu.hbs
utils/: config.js  setup.js
utils/scripts/: dev.js
(+52 files in other folders)
